--- a/android/configs/android-base.cfg
+++ b/android/configs/android-base.cfg
@@ -2,6 +2,7 @@
 # CONFIG_DEVKMEM is not set
 # CONFIG_DEVMEM is not set
 # CONFIG_FHANDLE is not set
+# CONFIG_DEVPORT is not set
 # CONFIG_INET_LRO is not set
 # CONFIG_NFSD is not set
 # CONFIG_NFS_FS is not set
