--- a/arch/arm64/configs/santoni_defconfig
+++ b/arch/arm64/configs/santoni_defconfig
@@ -301,6 +301,8 @@ CONFIG_IOSCHED_ZEN=y
 CONFIG_IOSCHED_SIO=y
 CONFIG_IOSCHED_BFQ=y
 CONFIG_CGROUP_BFQIO=y
+CONFIG_IOSCHED_MAPLE=y
+CONFIG_IOSCHED_SWITCHER=y
 # CONFIG_DEFAULT_DEADLINE is not set
 # CONFIG_DEFAULT_CFQ is not set
 CONFIG_DEFAULT_CFQ=y
