--- a/arch/arm64/configs/santoni_defconfig
+++ b/arch/arm64/configs/santoni_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 3.18.71 Kernel Configuration
+# Linux/arm64 3.18.98 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -43,8 +43,8 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-perf"
-CONFIG_LOCALVERSION_AUTO=y
+CONFIG_LOCALVERSION="-DragonDovahkiin"
+# CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
 # CONFIG_SYSVIPC is not set
@@ -129,14 +129,18 @@ CONFIG_CGROUPS=y
 # CONFIG_CGROUP_DEBUG is not set
 CONFIG_CGROUP_FREEZER=y
 # CONFIG_CGROUP_DEVICE is not set
-# CONFIG_CPUSETS is not set
+CONFIG_CPUSETS=y
+CONFIG_PROC_PID_CPUSET=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_RESOURCE_COUNTERS=y
-# CONFIG_MEMCG is not set
+CONFIG_MEMCG=y
+CONFIG_MEMCG_SWAP=y
+CONFIG_MEMCG_SWAP_ENABLED=y
+# CONFIG_MEMCG_KMEM is not set
 # CONFIG_CGROUP_PERF is not set
 CONFIG_CGROUP_SCHED=y
 CONFIG_FAIR_GROUP_SCHED=y
-# CONFIG_CFS_BANDWIDTH is not set
+CONFIG_CFS_BANDWIDTH=y
 CONFIG_RT_GROUP_SCHED=y
 # CONFIG_BLK_CGROUP is not set
 CONFIG_SCHED_HMP=y
@@ -392,6 +396,7 @@ CONFIG_SYS_SUPPORTS_HUGETLBFS=y
 CONFIG_ARCH_WANT_GENERAL_HUGETLB=y
 CONFIG_ARCH_WANT_HUGE_PMD_SHARE=y
 CONFIG_ARCH_HAS_CACHE_LINE_SIZE=y
+CONFIG_BOOT_INFO=y
 CONFIG_SELECT_MEMORY_MODEL=y
 CONFIG_SPARSEMEM_MANUAL=y
 CONFIG_SPARSEMEM=y
@@ -423,7 +428,7 @@ CONFIG_CMA_AREAS=7
 CONFIG_ZBUD=y
 CONFIG_ZSMALLOC=y
 # CONFIG_PGTABLE_MAPPING is not set
-# CONFIG_ZSMALLOC_STAT is not set
+CONFIG_ZSMALLOC_STAT=y
 CONFIG_GENERIC_EARLY_IOREMAP=y
 CONFIG_ZCACHE=y
 # CONFIG_BALANCE_ANON_FILE_RECLAIM is not set
@@ -474,6 +479,7 @@ CONFIG_COMPAT=y
 #
 CONFIG_SUSPEND=y
 CONFIG_SUSPEND_FREEZER=y
+CONFIG_SUSPEND_SKIP_SYNC=y
 CONFIG_WAKELOCK=y
 CONFIG_PM_SLEEP=y
 CONFIG_PM_SLEEP_SMP=y
@@ -487,6 +493,7 @@ CONFIG_PM_DEBUG=y
 # CONFIG_PM_ADVANCED_DEBUG is not set
 # CONFIG_PM_TEST_SUSPEND is not set
 CONFIG_PM_SLEEP_DEBUG=y
+# CONFIG_DPM_WATCHDOG is not set
 CONFIG_PM_OPP=y
 CONFIG_PM_CLK=y
 # CONFIG_WQ_POWER_EFFICIENT_DEFAULT is not set
@@ -548,6 +555,7 @@ CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 #
 # CONFIG_ARM_KIRKWOOD_CPUFREQ is not set
 CONFIG_CPU_FREQ_MSM=y
+CONFIG_ARM64_ERRATUM_843419=y
 CONFIG_NET=y
 CONFIG_COMPAT_NETLINK_MESSAGES=y
 # CONFIG_DISABLE_NET_SKB_FRAG_CACHE is not set
@@ -956,6 +964,7 @@ CONFIG_DNS_RESOLVER=y
 # CONFIG_BATMAN_ADV is not set
 # CONFIG_OPENVSWITCH is not set
 # CONFIG_VSOCKETS is not set
+# CONFIG_NETLINK_MMAP is not set
 # CONFIG_NETLINK_DIAG is not set
 # CONFIG_NET_MPLS_GSO is not set
 # CONFIG_HSR is not set
@@ -969,6 +978,7 @@ CONFIG_XPS=y
 # CONFIG_CGROUP_NET_CLASSID is not set
 CONFIG_NET_RX_BUSY_POLL=y
 CONFIG_BQL=y
+# CONFIG_BPF_JIT is not set
 CONFIG_NET_FLOW_LIMIT=y
 CONFIG_SOCKEV_NLMCAST=y
 
@@ -1060,6 +1070,7 @@ CONFIG_DEV_COREDUMP=y
 # CONFIG_DEBUG_DEVRES is not set
 # CONFIG_SYS_HYPERVISOR is not set
 # CONFIG_GENERIC_CPU_DEVICES is not set
+CONFIG_HAVE_CPU_AUTOPROBE=y
 CONFIG_GENERIC_CPU_AUTOPROBE=y
 CONFIG_SOC_BUS=y
 CONFIG_REGMAP=y
@@ -1168,6 +1179,7 @@ CONFIG_UID_STAT=y
 # CONFIG_SRAM is not set
 CONFIG_QSEECOM=y
 CONFIG_HDCP_QSEECOM=y
+CONFIG_UID_CPUTIME=y
 # CONFIG_PROFILER is not set
 # CONFIG_UID_SYS_STATS is not set
 CONFIG_USB_EXT_TYPE_C_PERICOM=y
@@ -1743,7 +1755,9 @@ CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_v21=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C_v21=y
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_SPI_v21 is not set
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_CORE_v21=y
+CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI_DEV_v21=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE_v21=y
+# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_PROXIMITY_v21 is not set
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_v26=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C_v26=y
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_SPI_v26 is not set
@@ -1807,6 +1821,10 @@ CONFIG_TOUCHSCREEN_GEN_VKEYS=y
 # CONFIG_TOUCHSCREEN_GT9XX is not set
 CONFIG_TOUCHSCREEN_MAXIM_STI=y
 CONFIG_TOUCHSCREEN_FT5336=y
+# CONFIG_TOUCHSCREEN_FT5346 is not set
+# CONFIG_TOUCHSCREEN_GT915L is not set
+# CONFIG_TOUCHSCREEN_GT917D is not set
+# CONFIG_TOUCHSCREEN_LOCKDOWN_INFO is not set
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_BMA150 is not set
@@ -2003,6 +2021,7 @@ CONFIG_I2C_MSM_V2=y
 #
 # Other I2C/SMBus bus drivers
 #
+# CONFIG_I2C_STUB is not set
 # CONFIG_I2C_DEBUG_CORE is not set
 # CONFIG_I2C_DEBUG_ALGO is not set
 # CONFIG_I2C_DEBUG_BUS is not set
@@ -2072,6 +2091,7 @@ CONFIG_PINCTRL_MSM=y
 # CONFIG_PINCTRL_APQ8064 is not set
 # CONFIG_PINCTRL_MDM9607 is not set
 # CONFIG_PINCTRL_MDM9640 is not set
+# CONFIG_PINCTRL_MDMCALIFORNIUM is not set
 # CONFIG_PINCTRL_MDM9650 is not set
 # CONFIG_PINCTRL_SDX20 is not set
 # CONFIG_PINCTRL_APQ8084 is not set
@@ -2174,7 +2194,12 @@ CONFIG_POWER_SUPPLY=y
 # CONFIG_SMB135X_CHARGER is not set
 # CONFIG_SMB1360_CHARGER_FG is not set
 # CONFIG_SMB358_CHARGER is not set
+# CONFIG_CHARGER_BQ2560 is not set
+# CONFIG_GAUGE_BQ27426 is not set
+# CONFIG_C3N_SMB358 is not set
+# CONFIG_C3B_BQ2560X is not set
 CONFIG_A13N_PMI8952=y
+# CONFIG_BATTERY_CW2015 is not set
 # CONFIG_SMB23X_CHARGER is not set
 # CONFIG_BATTERY_BQ28400 is not set
 # CONFIG_QPNP_CHARGER is not set
@@ -2190,6 +2215,7 @@ CONFIG_BATTERY_BCL=y
 # CONFIG_QPNP_TYPEC is not set
 CONFIG_MSM_BCL_CTL=y
 CONFIG_MSM_BCL_PERIPHERAL_CTL=y
+# CONFIG_DISABLE_TEMP_PROTECT is not set
 CONFIG_POWER_RESET=y
 # CONFIG_POWER_RESET_GPIO is not set
 # CONFIG_POWER_RESET_GPIO_RESTART is not set
@@ -2506,6 +2532,7 @@ CONFIG_REGULATOR_CPR3_MMSS=y
 # CONFIG_REGULATOR_CPR4_APSS is not set
 # CONFIG_REGULATOR_CPRH_KBSS is not set
 CONFIG_REGULATOR_KRYO=y
+# CONFIG_REGULATOR_TPS65132 is not set
 CONFIG_MEDIA_SUPPORT=y
 
 #
@@ -2614,6 +2641,7 @@ CONFIG_RADIO_SILABS=y
 # Media ancillary drivers (tuners, sensors, i2c, frontends)
 #
 CONFIG_MEDIA_SUBDRV_AUTOSELECT=y
+CONFIG_MEDIA_ATTACH=y
 
 #
 # Audio decoders, processors and mixers
@@ -2925,6 +2953,7 @@ CONFIG_SND_USB_AUDIO=y
 # CONFIG_SND_USB_6FIRE is not set
 # CONFIG_SND_USB_HIFACE is not set
 # CONFIG_SND_BCD2000 is not set
+# CONFIG_SND_USB_AUDIO_QMI is not set
 CONFIG_SND_SOC=y
 # CONFIG_SND_ATMEL_SOC is not set
 # CONFIG_SND_DESIGNWARE_I2S is not set
@@ -3379,6 +3408,7 @@ CONFIG_USB_G_ANDROID=y
 CONFIG_MMC=y
 # CONFIG_MMC_DEBUG is not set
 # CONFIG_MMC_PERF_PROFILING is not set
+# CONFIG_MMC_ERROR_STATUS is not set
 CONFIG_MMC_CLKGATE=y
 # CONFIG_MMC_RING_BUFFER is not set
 # CONFIG_MMC_EMBEDDED_SDIO is not set
@@ -3469,6 +3499,7 @@ CONFIG_LEDS_TRIGGERS=y
 #
 # CONFIG_LEDS_TRIGGER_TRANSIENT is not set
 # CONFIG_LEDS_TRIGGER_CAMERA is not set
+# CONFIG_VIB_GPIO is not set
 CONFIG_SWITCH=y
 # CONFIG_SWITCH_GPIO is not set
 # CONFIG_ACCESSIBILITY is not set
@@ -3621,12 +3652,17 @@ CONFIG_UIO_MSM_SHAREDMEM=y
 #
 CONFIG_STAGING=y
 # CONFIG_PRISM2_USB is not set
+# CONFIG_COMEDI is not set
+# CONFIG_RTL8192U is not set
+# CONFIG_RTLLIB is not set
 # CONFIG_R8712U is not set
 # CONFIG_R8188EU is not set
 # CONFIG_R8723AU is not set
 # CONFIG_RTS5208 is not set
 # CONFIG_LINE6_USB is not set
+# CONFIG_VT6655 is not set
 # CONFIG_FB_XGI is not set
+# CONFIG_BCM_WIMAX is not set
 # CONFIG_FT1000 is not set
 
 #
@@ -3641,6 +3677,7 @@ CONFIG_STAGING=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
+# CONFIG_ANDROID_BINDER_IPC_SELFTEST is not set
 CONFIG_ASHMEM=y
 # CONFIG_ANDROID_LOGGER is not set
 CONFIG_ANDROID_TIMED_OUTPUT=y
@@ -3652,6 +3689,7 @@ CONFIG_SW_SYNC=y
 CONFIG_SW_SYNC_USER=y
 CONFIG_ONESHOT_SYNC=y
 # CONFIG_ONESHOT_SYNC_USER is not set
+CONFIG_ANDROID_WHETSTONE=y
 CONFIG_ION=y
 # CONFIG_ION_TEST is not set
 # CONFIG_ION_DUMMY is not set
@@ -3661,9 +3699,12 @@ CONFIG_ION_MSM=y
 # CONFIG_FIQ_WATCHDOG is not set
 # CONFIG_USB_WPAN_HCD is not set
 # CONFIG_WIMAX_GDM72XX is not set
+# CONFIG_LTE_GDM724X is not set
+# CONFIG_LUSTRE_FS is not set
 # CONFIG_DGNC is not set
 # CONFIG_DGAP is not set
 # CONFIG_GS_FPGABOOT is not set
+CONFIG_KTRACE=y
 
 #
 # Qualcomm Atheros Prima WLAN module
@@ -3720,61 +3761,6 @@ CONFIG_MACH_XIAOMI_MSM8940=y
 # Xiaomi board selection
 #
 CONFIG_MACH_XIAOMI_SANTONI=y
-CONFIG_CLKDEV_LOOKUP=y
-CONFIG_HAVE_CLK_PREPARE=y
-CONFIG_MSM_CLK_CONTROLLER_V2=y
-CONFIG_MSM_MDSS_PLL=y
-CONFIG_HWSPINLOCK=y
-
-#
-# Hardware Spinlock drivers
-#
-CONFIG_REMOTE_SPINLOCK_MSM=y
-
-#
-# Clock Source drivers
-#
-CONFIG_CLKSRC_OF=y
-CONFIG_ARM_ARCH_TIMER=y
-CONFIG_ARM_ARCH_TIMER_EVTSTREAM=y
-# CONFIG_ATMEL_PIT is not set
-# CONFIG_SH_TIMER_CMT is not set
-# CONFIG_SH_TIMER_MTU2 is not set
-# CONFIG_SH_TIMER_TMU is not set
-# CONFIG_EM_TIMER_STI is not set
-# CONFIG_CLKSRC_VERSATILE is not set
-# CONFIG_MAILBOX is not set
-CONFIG_IOMMU_API=y
-CONFIG_IOMMU_SUPPORT=y
-
-#
-# Generic IOMMU Pagetable Support
-#
-CONFIG_IOMMU_IO_PGTABLE=y
-CONFIG_IOMMU_IO_PGTABLE_LPAE=y
-# CONFIG_IOMMU_IO_PGTABLE_LPAE_SELFTEST is not set
-# CONFIG_IOMMU_IO_PGTABLE_FAST is not set
-CONFIG_OF_IOMMU=y
-CONFIG_MSM_IOMMU=y
-CONFIG_MSM_IOMMU_V1=y
-# CONFIG_IOMMU_LPAE is not set
-# CONFIG_IOMMU_AARCH64 is not set
-# CONFIG_MSM_IOMMU_VBIF_CHECK is not set
-# CONFIG_IOMMU_NON_SECURE is not set
-# CONFIG_IOMMU_FORCE_4K_MAPPINGS is not set
-CONFIG_ARM_SMMU=y
-CONFIG_IOMMU_DEBUG=y
-# CONFIG_IOMMU_DEBUG_TRACKING is not set
-CONFIG_IOMMU_TESTS=y
-
-#
-# Remoteproc drivers
-#
-# CONFIG_STE_MODEM_RPROC is not set
-
-#
-# Rpmsg drivers
-#
 
 #
 # SOC (System On Chip) specific Drivers
@@ -3842,6 +3828,7 @@ CONFIG_MSM_EVENT_TIMER=y
 # CONFIG_MSM_IPC_ROUTER_GLINK_XPRT is not set
 # CONFIG_MSM_SYSTEM_HEALTH_MONITOR is not set
 # CONFIG_MSM_GLINK_PKT is not set
+# CONFIG_MSM_TZ_SMMU is not set
 CONFIG_MSM_SUBSYSTEM_RESTART=y
 CONFIG_MSM_SYSMON_COMM=y
 CONFIG_MSM_PIL=y
@@ -3858,17 +3845,79 @@ CONFIG_MSM_PERFORMANCE=y
 # CONFIG_MSM_POWER is not set
 # CONFIG_MSM_SERVICE_LOCATOR is not set
 # CONFIG_MSM_QBT1000 is not set
+# CONFIG_MSM_PACMAN is not set
 CONFIG_MSM_KERNEL_PROTECT=y
 CONFIG_MSM_KERNEL_PROTECT_MPU=y
 # CONFIG_MSM_KERNEL_PROTECT_TEST is not set
 # CONFIG_MSM_BGCOM is not set
 # CONFIG_MSM_REMOTEQDSS is not set
 CONFIG_SERIAL_NUM=y
+CONFIG_SECBOOT_FUSE=y
+CONFIG_CPUMAXFREQ=y
 # CONFIG_QCOM_SMCINVOKE is not set
 # CONFIG_QCOM_EARLY_RANDOM is not set
 # CONFIG_WCD_DSP_GLINK is not set
 CONFIG_MEM_SHARE_QMI_SERVICE=y
 # CONFIG_SOC_TI is not set
+CONFIG_CLKDEV_LOOKUP=y
+CONFIG_HAVE_CLK_PREPARE=y
+CONFIG_MSM_CLK_CONTROLLER_V2=y
+CONFIG_MSM_MDSS_PLL=y
+CONFIG_HWSPINLOCK=y
+
+#
+# Hardware Spinlock drivers
+#
+CONFIG_REMOTE_SPINLOCK_MSM=y
+
+#
+# Clock Source drivers
+#
+CONFIG_CLKSRC_OF=y
+CONFIG_ARM_ARCH_TIMER=y
+CONFIG_ARM_ARCH_TIMER_EVTSTREAM=y
+# CONFIG_ATMEL_PIT is not set
+# CONFIG_SH_TIMER_CMT is not set
+# CONFIG_SH_TIMER_MTU2 is not set
+# CONFIG_SH_TIMER_TMU is not set
+# CONFIG_EM_TIMER_STI is not set
+# CONFIG_CLKSRC_VERSATILE is not set
+# CONFIG_MAILBOX is not set
+CONFIG_IOMMU_API=y
+CONFIG_IOMMU_SUPPORT=y
+
+#
+# Generic IOMMU Pagetable Support
+#
+CONFIG_IOMMU_IO_PGTABLE=y
+CONFIG_IOMMU_IO_PGTABLE_LPAE=y
+# CONFIG_IOMMU_IO_PGTABLE_LPAE_SELFTEST is not set
+# CONFIG_IOMMU_IO_PGTABLE_FAST is not set
+CONFIG_OF_IOMMU=y
+CONFIG_MSM_IOMMU=y
+CONFIG_MSM_IOMMU_V1=y
+# CONFIG_IOMMU_LPAE is not set
+# CONFIG_IOMMU_AARCH64 is not set
+# CONFIG_MSM_IOMMU_VBIF_CHECK is not set
+# CONFIG_IOMMU_NON_SECURE is not set
+# CONFIG_IOMMU_FORCE_4K_MAPPINGS is not set
+CONFIG_ARM_SMMU=y
+CONFIG_IOMMU_DEBUG=y
+# CONFIG_IOMMU_DEBUG_TRACKING is not set
+CONFIG_IOMMU_TESTS=y
+
+#
+# Remoteproc drivers
+#
+# CONFIG_STE_MODEM_RPROC is not set
+
+#
+# Rpmsg drivers
+#
+
+#
+# SOC (System On Chip) specific Drivers
+#
 CONFIG_PM_DEVFREQ=y
 
 #
@@ -4071,7 +4120,11 @@ CONFIG_SDCARD_FS=y
 # CONFIG_QNX4FS_FS is not set
 # CONFIG_QNX6FS_FS is not set
 # CONFIG_ROMFS_FS is not set
-# CONFIG_PSTORE is not set
+CONFIG_PSTORE=y
+CONFIG_PSTORE_CONSOLE=y
+CONFIG_PSTORE_PMSG=y
+CONFIG_PSTORE_RAM=y
+CONFIG_PSTORE_LAST_KMSG=y
 # CONFIG_SYSV_FS is not set
 # CONFIG_UFS_FS is not set
 CONFIG_F2FS_FS=y
@@ -4178,6 +4231,8 @@ CONFIG_DEBUG_INFO=y
 # CONFIG_DEBUG_INFO_DWARF4 is not set
 CONFIG_ENABLE_WARN_DEPRECATED=y
 CONFIG_ENABLE_MUST_CHECK=y
+# CONFIG_FIRE_WATCHDOG is not set
+CONFIG_DUMP_ALL_STACKS=y
 CONFIG_FRAME_WARN=2048
 # CONFIG_STRIP_ASM_SYMS is not set
 # CONFIG_READABLE_ASM is not set
@@ -4303,11 +4358,16 @@ CONFIG_CPU_FREQ_SWITCH_PROFILER=y
 # CONFIG_TEST_LIST_SORT is not set
 # CONFIG_BACKTRACE_SELF_TEST is not set
 # CONFIG_RBTREE_TEST is not set
+# CONFIG_INTERVAL_TREE_TEST is not set
+# CONFIG_PERCPU_TEST is not set
 # CONFIG_ATOMIC64_SELFTEST is not set
 # CONFIG_TEST_STRING_HELPERS is not set
 # CONFIG_TEST_KSTRTOX is not set
 # CONFIG_TEST_RHASHTABLE is not set
 # CONFIG_DMA_API_DEBUG is not set
+# CONFIG_TEST_LKM is not set
+# CONFIG_TEST_USER_COPY is not set
+# CONFIG_TEST_BPF is not set
 # CONFIG_TEST_FIRMWARE is not set
 # CONFIG_TEST_UDELAY is not set
 # CONFIG_PANIC_ON_DATA_CORRUPTION is not set
@@ -4321,6 +4381,7 @@ CONFIG_ARCH_HAS_UBSAN_SANITIZE_ALL=y
 # CONFIG_STRICT_DEVMEM is not set
 # CONFIG_PID_IN_CONTEXTIDR is not set
 # CONFIG_ARM64_RANDOMIZE_TEXT_OFFSET is not set
+CONFIG_DEBUG_SET_MODULE_RONX=y
 # CONFIG_FORCE_PAGES is not set
 # CONFIG_FREE_PAGES_RDONLY is not set
 # CONFIG_DEBUG_RODATA is not set
@@ -4395,6 +4456,7 @@ CONFIG_CRYPTO_WORKQUEUE=y
 CONFIG_CRYPTO_CRYPTD=y
 # CONFIG_CRYPTO_MCRYPTD is not set
 CONFIG_CRYPTO_AUTHENC=y
+# CONFIG_CRYPTO_TEST is not set
 CONFIG_CRYPTO_ABLK_HELPER=y
 
 #
@@ -4543,6 +4605,7 @@ CONFIG_DECOMPRESS_BZIP2=y
 CONFIG_DECOMPRESS_LZMA=y
 CONFIG_GENERIC_ALLOCATOR=y
 CONFIG_REED_SOLOMON=y
+CONFIG_REED_SOLOMON_ENC8=y
 CONFIG_REED_SOLOMON_DEC8=y
 CONFIG_TEXTSEARCH=y
 CONFIG_TEXTSEARCH_KMP=y
