--- a/drivers/soc/qcom/Makefile
+++ b/drivers/soc/qcom/Makefile
@@ -97,6 +97,8 @@ obj-$(CONFIG_SECBOOT_FUSE) += secboot_fuse.o
 obj-$(CONFIG_CPUMAXFREQ) += cpumaxfreq.o
 
 obj-$(CONFIG_MSM_BGCOM_INTERFACE) += bgcom_interface.o
+obj-$(CONFIG_SERIAL_NUM) += serial_num.o
+
 obj-$(CONFIG_MSM_SERVICE_NOTIFIER) += service-notifier.o
 obj-$(CONFIG_MSM_SYSMON_COMM) += sysmon.o sysmon-qmi.o
 obj-$(CONFIG_MSM_SECURE_BUFFER) += secure_buffer.o
