--- a/arch/arm64/configs/santoni_defconfig
+++ b/arch/arm64/configs/santoni_defconfig
@@ -297,10 +297,17 @@ CONFIG_IOSCHED_NOOP=y
 # CONFIG_IOSCHED_TEST is not set
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
+CONFIG_IOSCHED_ZEN=y
+CONFIG_IOSCHED_SIO=y
+CONFIG_IOSCHED_BFQ=y
+CONFIG_CGROUP_BFQIO=y
 # CONFIG_DEFAULT_DEADLINE is not set
+# CONFIG_DEFAULT_CFQ is not set
 CONFIG_DEFAULT_CFQ=y
 # CONFIG_DEFAULT_NOOP is not set
 CONFIG_DEFAULT_IOSCHED="cfq"
+# CONFIG_DEFAULT_ZEN is not set
+# CONFIG_DEFAULT_SIO is not set
 CONFIG_ASN1=y
 CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
@@ -1684,7 +1691,7 @@ CONFIG_CLD_LL_CORE=y
 # CONFIG_CNSS_SECURE_FW is not set
 CONFIG_BUS_AUTO_SUSPEND=y
 # CONFIG_CNSS_LOGGER is not set
-# CONFIG_WLAN_FEATURE_RX_WAKELOCK is not set
+CONFIG_WLAN_FEATURE_RX_WAKELOCK=y
 CONFIG_CNSS_UTILS=y
 
 #
