--- a/arch/arm64/configs/santoni_defconfig
+++ b/arch/arm64/configs/santoni_defconfig
@@ -257,14 +257,7 @@ CONFIG_COMPAT_OLD_SIGACTION=y
 CONFIG_HAVE_GENERIC_DMA_COHERENT=y
 CONFIG_RT_MUTEXES=y
 CONFIG_BASE_SMALL=0
-CONFIG_MODULES=y
-# CONFIG_MODULE_FORCE_LOAD is not set
-CONFIG_MODULE_UNLOAD=y
-CONFIG_MODULE_FORCE_UNLOAD=y
-CONFIG_MODVERSIONS=y
-# CONFIG_MODULE_SRCVERSION_ALL is not set
-# CONFIG_MODULE_SIG is not set
-# CONFIG_MODULE_COMPRESS is not set
+# CONFIG_MODULES is not set
 CONFIG_STOP_MACHINE=y
 CONFIG_BLOCK=y
 CONFIG_BLK_DEV_BSG=y
@@ -327,10 +320,11 @@ CONFIG_FREEZER=y
 # CONFIG_ARCH_MSM8916 is not set
 # CONFIG_ARCH_MSM8917 is not set
 # CONFIG_ARCH_MSM8920 is not set
+# CONFIG_ARCH_MSM8953 is not set
 CONFIG_ARCH_MSM=y
 CONFIG_ARCH_MSM8937=y
 CONFIG_ARCH_MSM8940=y
-CONFIG_ARCH_MSM8953=y
+CONFIG_ARCH_MSM8916=y
 
 #
 # Bus support
@@ -375,7 +369,6 @@ CONFIG_ARM64_4K_PAGES=y
 # CONFIG_ARM64_64K_PAGES is not set
 # CONFIG_ARM64_DCACHE_DISABLE is not set
 # CONFIG_ARM64_ICACHE_DISABLE is not set
-CONFIG_ARCH_MSM8953_SOC_SETTINGS=y
 CONFIG_ARM64_VA_BITS_39=y
 CONFIG_ARM64_VA_BITS=39
 # CONFIG_CPU_BIG_ENDIAN is not set
@@ -562,7 +555,6 @@ CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 #
 # CONFIG_ARM_KIRKWOOD_CPUFREQ is not set
 CONFIG_CPU_FREQ_MSM=y
-CONFIG_ARM64_ERRATUM_843419=y
 CONFIG_NET=y
 CONFIG_COMPAT_NETLINK_MESSAGES=y
 # CONFIG_DISABLE_NET_SKB_FRAG_CACHE is not set
@@ -984,7 +976,6 @@ CONFIG_XPS=y
 # CONFIG_CGROUP_NET_CLASSID is not set
 CONFIG_NET_RX_BUSY_POLL=y
 CONFIG_BQL=y
-# CONFIG_BPF_JIT is not set
 CONFIG_NET_FLOW_LIMIT=y
 CONFIG_SOCKEV_NLMCAST=y
 
@@ -2027,7 +2018,6 @@ CONFIG_I2C_MSM_V2=y
 #
 # Other I2C/SMBus bus drivers
 #
-# CONFIG_I2C_STUB is not set
 # CONFIG_I2C_DEBUG_CORE is not set
 # CONFIG_I2C_DEBUG_ALGO is not set
 # CONFIG_I2C_DEBUG_BUS is not set
@@ -2105,10 +2095,7 @@ CONFIG_PINCTRL_MSM=y
 # CONFIG_PINCTRL_MSM8X74 is not set
 CONFIG_PINCTRL_MSM8952=y
 CONFIG_PINCTRL_MSM8937=y
-CONFIG_PINCTRL_MSMCOBALT=y
-CONFIG_PINCTRL_MSM8917=y
 CONFIG_PINCTRL_MSM8940=y
-CONFIG_PINCTRL_MSM8953=y
 CONFIG_ARCH_HAVE_CUSTOM_GPIO_H=y
 CONFIG_ARCH_WANT_OPTIONAL_GPIOLIB=y
 CONFIG_ARCH_REQUIRE_GPIOLIB=y
@@ -2648,7 +2635,6 @@ CONFIG_RADIO_SILABS=y
 # Media ancillary drivers (tuners, sensors, i2c, frontends)
 #
 CONFIG_MEDIA_SUBDRV_AUTOSELECT=y
-CONFIG_MEDIA_ATTACH=y
 
 #
 # Audio decoders, processors and mixers
@@ -3657,15 +3643,11 @@ CONFIG_UIO_MSM_SHAREDMEM=y
 #
 CONFIG_STAGING=y
 # CONFIG_PRISM2_USB is not set
-# CONFIG_COMEDI is not set
-# CONFIG_RTL8192U is not set
-# CONFIG_RTLLIB is not set
 # CONFIG_R8712U is not set
 # CONFIG_R8188EU is not set
 # CONFIG_R8723AU is not set
 # CONFIG_RTS5208 is not set
 # CONFIG_LINE6_USB is not set
-# CONFIG_VT6655 is not set
 # CONFIG_FB_XGI is not set
 # CONFIG_FT1000 is not set
 
@@ -3701,8 +3683,6 @@ CONFIG_ION_MSM=y
 # CONFIG_FIQ_WATCHDOG is not set
 # CONFIG_USB_WPAN_HCD is not set
 # CONFIG_WIMAX_GDM72XX is not set
-# CONFIG_LTE_GDM724X is not set
-# CONFIG_LUSTRE_FS is not set
 # CONFIG_DGNC is not set
 # CONFIG_DGAP is not set
 # CONFIG_GS_FPGABOOT is not set
@@ -3880,7 +3860,6 @@ CONFIG_MSM_EVENT_TIMER=y
 # CONFIG_MSM_IPC_ROUTER_GLINK_XPRT is not set
 # CONFIG_MSM_SYSTEM_HEALTH_MONITOR is not set
 # CONFIG_MSM_GLINK_PKT is not set
-# CONFIG_MSM_TZ_SMMU is not set
 CONFIG_MSM_SUBSYSTEM_RESTART=y
 CONFIG_MSM_SYSMON_COMM=y
 CONFIG_MSM_PIL=y
@@ -4345,16 +4324,11 @@ CONFIG_CPU_FREQ_SWITCH_PROFILER=y
 # CONFIG_TEST_LIST_SORT is not set
 # CONFIG_BACKTRACE_SELF_TEST is not set
 # CONFIG_RBTREE_TEST is not set
-# CONFIG_INTERVAL_TREE_TEST is not set
-# CONFIG_PERCPU_TEST is not set
 # CONFIG_ATOMIC64_SELFTEST is not set
 # CONFIG_TEST_STRING_HELPERS is not set
 # CONFIG_TEST_KSTRTOX is not set
 # CONFIG_TEST_RHASHTABLE is not set
 # CONFIG_DMA_API_DEBUG is not set
-# CONFIG_TEST_LKM is not set
-# CONFIG_TEST_USER_COPY is not set
-# CONFIG_TEST_BPF is not set
 # CONFIG_TEST_FIRMWARE is not set
 # CONFIG_TEST_UDELAY is not set
 # CONFIG_PANIC_ON_DATA_CORRUPTION is not set
@@ -4368,7 +4342,6 @@ CONFIG_ARCH_HAS_UBSAN_SANITIZE_ALL=y
 # CONFIG_STRICT_DEVMEM is not set
 # CONFIG_PID_IN_CONTEXTIDR is not set
 # CONFIG_ARM64_RANDOMIZE_TEXT_OFFSET is not set
-CONFIG_DEBUG_SET_MODULE_RONX=y
 # CONFIG_FORCE_PAGES is not set
 # CONFIG_FREE_PAGES_RDONLY is not set
 # CONFIG_DEBUG_RODATA is not set
@@ -4444,7 +4417,6 @@ CONFIG_CRYPTO_WORKQUEUE=y
 CONFIG_CRYPTO_CRYPTD=y
 # CONFIG_CRYPTO_MCRYPTD is not set
 CONFIG_CRYPTO_AUTHENC=y
-# CONFIG_CRYPTO_TEST is not set
 CONFIG_CRYPTO_ABLK_HELPER=y
 
 #
