--- a/arch/arm64/configs/santoni_defconfig
+++ b/arch/arm64/configs/santoni_defconfig
@@ -584,6 +584,8 @@ CONFIG_XFRM_IPCOMP=y
 CONFIG_NET_KEY=y
 CONFIG_NET_KEY_MIGRATE=y
 CONFIG_INET=y
+CONFIG_WIREGUARD=y
+# CONFIG_WIREGUARD_DEBUG is not set
 CONFIG_IP_MULTICAST=y
 CONFIG_IP_ADVANCED_ROUTER=y
 # CONFIG_IP_FIB_TRIE_STATS is not set
@@ -2218,6 +2220,7 @@ CONFIG_BATTERY_BCL=y
 # CONFIG_QPNP_TYPEC is not set
 CONFIG_MSM_BCL_CTL=y
 CONFIG_MSM_BCL_PERIPHERAL_CTL=y
+CONFIG_FORCE_FAST_CHARGE=y
 # CONFIG_DISABLE_TEMP_PROTECT is not set
 CONFIG_POWER_RESET=y
 # CONFIG_POWER_RESET_GPIO is not set
