ARM: dts: update some properties for msm8937/40.
Compare latest Xiaomi reversed dtb for santoni.
(diff -u <a.file> <b.file>)!

Signed-off-by: Ryan Andri <ryanandri@linuxmail.org>

--- a/arch/arm/boot/dts/qcom/msm8940.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8940.dtsi
@@ -477,6 +477,9 @@
 };
 
 &mdss_mdp {
+	/delete-property/ qcom,mdss-rot-downscale-min;
+	/delete-property/ qcom,mdss-rot-downscale-max;
+
 	qcom,vbif-settings = <0x0d0 0x00000020>;
 };
 
@@ -567,6 +570,7 @@
 &msm_gpu {
 
 	qcom,restrict-pwrlevel = <1>;
+	/delete-property/qcom,gpu-quirk-lmloadkill-disable;
 	/delete-property/qcom,gpu-speed-bin;
 	qcom,gpu-speed-bin = <0x0174 0x80000000 31>;
 
