qcom:defconfig: enable quickwakup

--- a/arch/arm64/configs/santoni_defconfig
+++ b/arch/arm64/configs/santoni_defconfig
@@ -3952,6 +3952,7 @@ CONFIG_CPUMAXFREQ=y
 CONFIG_MEM_SHARE_QMI_SERVICE=y
 # CONFIG_SOC_TI is not set
 CONFIG_PM_DEVFREQ=y
+CONFIG_QUICK_WAKEUP=y
 
 #
 # DEVFREQ Governors
