defconfig: add MIUI 8.3.8 changes

--- a/arch/arm64/configs/santoni_defconfig
+++ b/arch/arm64/configs/santoni_defconfig
@@ -3672,6 +3672,7 @@ CONFIG_ION_MSM=y
 # CONFIG_DGAP is not set
 # CONFIG_GS_FPGABOOT is not set
 CONFIG_KTRACE=y
+CONFIG_RTMM=y
 # CONFIG_GOLDFISH is not set
 
 #
