defconfig: regenerate for oreo

--- a/arch/arm64/configs/santoni_defconfig
+++ b/arch/arm64/configs/santoni_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 3.18.98 Kernel Configuration
+# Linux/arm64 3.18.99 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -43,8 +43,8 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION=""
-CONFIG_LOCALVERSION_AUTO=y
+CONFIG_LOCALVERSION="DragonKernel"
+# CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
 # CONFIG_SYSVIPC is not set
@@ -165,7 +165,8 @@ CONFIG_RD_LZMA=y
 # CONFIG_RD_XZ is not set
 # CONFIG_RD_LZO is not set
 # CONFIG_RD_LZ4 is not set
-CONFIG_CC_OPTIMIZE_FOR_SIZE=y
+# CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
+CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE=y
 CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
 CONFIG_HAVE_UID16=y
@@ -320,16 +321,16 @@ CONFIG_FREEZER=y
 # CONFIG_ARCH_THUNDER is not set
 # CONFIG_ARCH_VEXPRESS is not set
 # CONFIG_ARCH_XGENE is not set
+# CONFIG_ARCH_SDM450 is not set
+# CONFIG_ARCH_MSM8996 is not set
+# CONFIG_ARCH_MSMCOBALT is not set
+# CONFIG_ARCH_MSM8916 is not set
+# CONFIG_ARCH_MSM8917 is not set
+# CONFIG_ARCH_MSM8920 is not set
 CONFIG_ARCH_MSM=y
-CONFIG_ARCH_MSM8916=y
-CONFIG_ARCH_MSM8917=y
-CONFIG_ARCH_MSM8920=y
+CONFIG_ARCH_MSM8937=y
 CONFIG_ARCH_MSM8940=y
 CONFIG_ARCH_MSM8953=y
-# CONFIG_ARCH_SDM450 is not set
-CONFIG_ARCH_MSM8937=y
-# CONFIG_ARCH_MSM8996 is not set
-CONFIG_ARCH_MSMCOBALT=y
 
 #
 # Bus support
@@ -420,7 +421,7 @@ CONFIG_MIGRATION=y
 CONFIG_PHYS_ADDR_T_64BIT=y
 CONFIG_ZONE_DMA_FLAG=1
 CONFIG_BOUNCE=y
-# CONFIG_KSM is not set
+CONFIG_KSM=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 # CONFIG_TRANSPARENT_HUGEPAGE is not set
 CONFIG_CLEANCACHE=y
