--- a/arch/arm64/configs/santoni_defconfig
+++ b/arch/arm64/configs/santoni_defconfig
@@ -506,6 +506,7 @@ CONFIG_PM_OPP=y
 CONFIG_PM_CLK=y
 # CONFIG_WQ_POWER_EFFICIENT_DEFAULT is not set
 CONFIG_CPU_PM=y
+CONFIG_QUICK_WAKEUP=y
 CONFIG_SUSPEND_TIME=y
 # CONFIG_DEDUCE_WAKEUP_REASONS is not set
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
