ARM64: configs: santoni: enable cultivation, Ironactive governors
Signed-off-by: Ryan Andri <ryanandri@linuxmail.org>

--- a/arch/arm64/configs/santoni_defconfig
+++ b/arch/arm64/configs/santoni_defconfig
@@ -539,6 +539,8 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_DARKNESS is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ALUCARD is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SCHED is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_IRONACTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_CULTIVATION is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
@@ -554,6 +556,8 @@ CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 # CPU frequency scaling drivers
 #
 # CONFIG_CPUFREQ_DT is not set
+CONFIG_CPU_FREQ_GOV_IRONACTIVE=y
+CONFIG_CPU_FREQ_GOV_CULTIVATION=y
 # CONFIG_CPU_BOOST is not set
 
 #
